# Guidance-robot

./: README.md
navigation/: CMakeLists.txt  package.xml
navigation/launch/: find.launch  map_navigation_stage_psu.launch  turtlebot_stage_psu.launch
navigation/map/: floor.pgm  floor.world  floor.yaml  floor3.yaml  lab.world  lab_map.pgm  lab_map.yaml  level3.pgm  level3.world  level3.yaml  my_map.pgm
navigation/src/: input_navigation.cpp  map_navigation.cpp
new_project/: CMakeLists.txt  package.xml
new_project/config/: 6011.dic  6011.lm  6011.log_pronounce  6011.sent  6011.vocab  6235.dict  6235.word  TAR9958.tgz  motion_commands.dic  motion_commands.log_pronounce
new_project/config/TAR7850/: 7850.dic  7850.lm  7850.sent  7850.vocab
new_project/config/TAR9958/: 9958.dic  9958.lm  9958.log_pronounce  9958.sent  9958.vocab
new_project/launch/: recognizer.launch
new_project/src/: moving.cpp
